# ros2_control_solo-old

./: .gitignore  README.md
models/: CMakeLists.txt  package.xml
models/models/ground_plane/: model.sdf
models/worlds/: empty.world
ros2_control_solo/: CMakeLists.txt  package.xml
ros2_control_solo_bringup/: CMakeLists.txt  package.xml
ros2_control_solo_bringup/config/: ekf.yaml  solo_controllers.yaml  solo_effort_controller.yaml  solo_forward_position_publisher.yaml  solo_gazebo_forward_controller_position.yaml  solo_gazebo_test_controllers.yaml  solo_joint_trajectory_publisher.yaml  solo_test_controllers.yaml
ros2_control_solo_bringup/launch/: solo.launch.py  solo_joint_trajectory_publisher.launch.py  solo_system_position_only.launch.py  solo_system_position_only_gazebo.launch.py  solo_test_controllers.launch.py  solo_test_controllers_cpp.launch.py  solo_test_effort.launch.py  solo_test_effort_cpp.launch.py  test_forward_position_controller.launch.py
ros2_control_test_nodes/: CMakeLists.txt  package.xml  setup.py
ros2_control_test_nodes/include/ros2_control_test_nodes/: Controllers.hpp  ControllersNode.hpp
ros2_control_test_nodes/include/ros2_control_test_nodes/mim_control/: centroidal_force_qp_controller.hpp  centroidal_pd_controller.hpp  demo_reactive_planners_solo12_step_adjustment.hpp  impedance_controller.hpp
ros2_control_test_nodes/include/ros2_control_test_nodes/mim_control/reactive_planners/: dcm_reactive_stepper.hpp  quadruped_dcm_reactive_stepper.hpp
ros2_control_test_nodes/include/ros2_control_test_nodes/reactive_planners/: demo_reactive_planners_solo12_step_adjustment.hpp  quadruped_dcm_reactive_stepper.hpp
ros2_control_test_nodes/ros2_control_test_nodes/: node.py  test_controllers.py  test_effort_controller.py
ros2_control_test_nodes/ros2_control_test_nodes/PD_control/: controllers.py  pinocchio_helper_functions.py  potential_field_planner.py
ros2_control_test_nodes/ros2_control_test_nodes/effort_controller/: controllers.py  node.py  pinocchio_helper_functions.py  potential_field_planner.py
ros2_control_test_nodes/ros2_control_test_nodes/impedance/: node.py
ros2_control_test_nodes/ros2_control_test_nodes/impedance/mim_control/: demo_robot_com_ctrl.py  demo_robot_impedance.py  impedance_controller.py  robot_centroidal_controller.py
ros2_control_test_nodes/ros2_control_test_nodes/impedance/robot_properties_solo/: Solo12Config.py  Solo12Robot.py
ros2_control_test_nodes/ros2_control_test_nodes/mim_control/: demo_robot_com_ctrl.py  demo_robot_impedance.py  impedance_controller.py  node.py
ros2_control_test_nodes/ros2_control_test_nodes/mim_control/mim_control/: demo_robot_com_ctrl.py  demo_robot_impedance.py  impedance_controller.py
ros2_control_test_nodes/ros2_control_test_nodes/mim_control/reactive_planners/: demo_reactive_planners_solo12_step_adjustment_walk.py
ros2_control_test_nodes/ros2_control_test_nodes/mim_control/robot_properties_solo/: Solo12Config.py
ros2_control_test_nodes/ros2_control_test_nodes/reactive_planners/: demo_reactive_planners_solo12_step_adjustment_walk.py
ros2_control_test_nodes/ros2_control_test_nodes/robot_properties_solo/: Solo12Config.py
ros2_control_test_nodes/src/: Controllers.cpp  ControllersNode.cpp  Node.cpp
ros2_control_test_nodes/src/Algorithms/mim_control/: centroidal_force_qp_controller.cpp  centroidal_pd_controller.cpp  demo_com_ctrl_cpp.cpp  demo_reactive_planners_solo12_step_adjustment.cpp  impedance_controller.cpp
ros2_control_test_nodes/src/Algorithms/mim_control/reactive_planners/: dcm_reactive_stepper.cpp  dcm_vrp_planner.cpp  dynamically_consistent_end_effector_trajectory.cpp  polynomial_end_effector_trajectory.cpp  quadruped_dcm_reactive_stepper.cpp  stepper_head.cpp
ros2_control_test_nodes/src/Algorithms/reactive_planners/: demo_reactive_planners_solo12_step_adjustment.cpp  quadruped_dcm_reactive_stepper.cpp
ros2_description_solo/: CMakeLists.txt  package.xml
ros2_description_solo/config/: solo.rviz
ros2_description_solo/ros2_control/: system_solo.ros2_control.xacro
ros2_description_solo/urdf/: leg.xacro  solo12.urdf  solo12.urdf.xacro  solo12_simulation.sdf  solo12_simulation.urdf
ros2_hardware_interface_solo/: CMakeLists.txt  package.xml
ros2_hardware_interface_solo/include/: system_solo.hpp  visibility_control.h
ros2_hardware_interface_solo/src/: solo_hardware_calibration.cpp  system_solo.cpp
ros2_hardware_interface_solo/test/: demo_solo_from_yaml.cpp  demo_solo_sensor_reading.cpp
ros2_solo_12/: CMakeLists.txt  CMakeLists.txt.orig  package.xml
ros2_solo_12/config/: controllers.yaml
ros2_solo_12/launch/: view_solo.launch.py  view_solo.launch.py.orig
ros2_solo_12/urdf/: leg.xacro  solo12.urdf.xacro
