<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>models</name>
  <version>0.0.0</version>
  <description>Package with the world files to simulate Solo in Gazebo.</description>

  <maintainer email="stanley.wu@mail.mcgill.ca">Stanley Wu</maintainer>

  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
        <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.."
    />
  </export>
</package>
