<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_solo_12</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stanley.wu@mail.mcgill.ca">stanleyzqwu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- for ros2_control demos -->
<!--  <depend>hardware_interface</depend>-->
<!--  <depend>pluginlib</depend>-->
<!--  <depend>rclcpp</depend>-->

<!--  <exec_depend>ros2launch</exec_depend>-->
<!--  <exec_depend>control_msgs</exec_depend>-->
<!--  <exec_depend>effort_controllers</exec_depend>-->
<!--  <exec_depend>gazebo_ros2_control</exec_depend>-->
<!--  <exec_depend>gazebo_ros</exec_depend>-->
<!--  <exec_depend>ros2_control</exec_depend>-->
<!--  <exec_depend>ros2_controllers</exec_depend>-->
<!--  <exec_depend>std_msgs</exec_depend>-->
<!--  <exec_depend>joint_state_broadcaster</exec_depend>-->
<!--  <exec_depend>robot_state_publisher</exec_depend>-->
<!--  <exec_depend>joint_state_publisher</exec_depend>-->
<!--  <exec_depend>gazebo_ros</exec_depend>-->
<!--  <exec_depend>rviz2</exec_depend>-->

  <build_depend>control_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<!--  <depend>urdf</depend>-->
<!--  <depend>angles</depend>-->
<!--  <depend>gazebo_dev</depend>-->
<!--  <depend>controller_manager</depend>-->
<!--  <depend>hardware_interface</depend>-->
<!--  <depend>pluginlib</depend>-->
<!--  <depend>std_msgs</depend>-->
<!--  <depend>gazebo_ros_pkgs</depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
